# docchat

./: .gitignore  README.md  app.py  pyproject.toml
agents/: relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
config/: settings.py
document_processor/: __init__.py  base.py  docling.py  file_handler.py
pages/: README.md  __init__.py  utils.py
pages/kb/: __init__.py  add_doc.py  add_kb.py  kb_manage.py  list_docAkb.py  read_kb.py  test_kb.py
pages/main/: __init__.py
pages/setting/: __init__.py
parser/: base.py  docling.py
rag/parser/: __init__.py  base.py  docling.py  mineru.py
rag/retriever/: README.md  __init__.py  base.py  chroma.py
retriever/: __init__.py  base.py  builder.py  chroma.py  post_processor.py
test/: api.py  file_manager.py  kb_chroma.py
utils/: __init__.py  cache_queue.py  file_manage.py  kb.py  logging.py
