[project]
name = "docchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modelscope>=1.32.0",
    "onnxruntime-gpu>=1.23.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "setuptools>=80.9.0",
]
