[project]
name = "docchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "modelscope>=1.32.0",
    "onnxruntime-gpu>=1.23.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "setuptools>=80.9.0",
]
